@@ -4,6 +4,8 @@ Change History
 1.6.0b4 (unreleased)
 --------------------
 
+- Add form tracking plugin for collective.googleanalytics. (Matt Yoder)
+
 - Switch to using a hash rather than a query string for indicating
   quick edit mode. More stable since the browser doesn't care.
   (Steve McMahon)
